# AI-Powered-Migration-Validation-System

./: .env  .env.example  .flake8  .gitignore  .secrets.baseline  DATABASE_DESIGN.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QA-SIMPLIFICATION.md  README.md  SECURITY-REMEDIATION.md  SECURITY_IMPLEMENTATION.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SETUP.md  alembic.ini  bandit-report.json  bandit-report.txt  docker-compose.yml  evolucao.md  manage_db.py  pyproject.toml  pytest.ini  quick_setup.py  requirements-ai.txt  requirements-dev.txt  requirements-minimal.txt  requirements-security.txt  requirements.txt  run.py  run_tests.py  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-checks.yml  release.yml  security-scan.yml  security.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_purpose.md  project_structure.md  suggested_commands.md  task_completion_guidelines.md  tech_stack.md
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_soft_delete_functionality.py
docs/: BROWSER_AUTOMATION_IMPLEMENTATION.md  DATABASE_IMPLEMENTATION.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DEVELOPER_WORKFLOW.md  IMPLEMENTATION_STATUS_UPDATE.md  INDEX.md  MASTER_DEPLOYMENT_STRATEGY.md  MASTER_DEPLOYMENT_SUMMARY.md  README.md  REQUIREMENTS_CONSOLIDATION.md  SECURITY.md  SETUP.md  TEST_EXECUTION_SUMMARY.md  architecture-analysis.md  behavioral_endpoints_summary.md  browser_automation.md  ci-cd-setup.md  deployment-guide.md  implementation-backlog.md  proposta.md  technical-specifications.md  testing-strategy.md
monitoring/: docker-compose.monitoring.yml
monitoring/grafana/: dashboard.json
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: clean-git-history.sh  database_management.py  deploy.sh  setup_security.py  start_celery_worker.py  verify-deployment.sh
src/: main.py
src/analyzers/: __init__.py  base.py  code_analyzer.py  visual_analyzer.py
src/api/: __init__.py  async_routes.py  auth_routes.py  database_routes.py  middleware.py  monitoring_routes.py  routes.py  secure_api_routes.py  secure_routes.py
src/behavioral/: __init__.py  browser_automation.py  crews.py
src/comparators/: semantic_comparator.py
src/config/: __init__.py  database.py  llm_providers.py  security.py  settings.py
src/core/: __init__.py  config.py  exceptions.py  input_processor.py  logging.py  migration_validator.py  models.py
src/database/: README.md  __init__.py  config.py  integration.py  migrations.py  models.py  repositories.py  security_models.py  security_service.py  service.py  session.py  utils.py
src/monitoring/: health.py  logging.py  metrics.py
src/reporters/: validation_reporter.py
src/security/: __init__.py  api_keys.py  audit.py  auth.py  config.py  encryption.py  headers.py  middleware.py  password_policy.py  rate_limiter.py  schemas.py  session_manager.py  validation.py
src/services/: __init__.py  llm_service.py  prompt_templates.py  task_queue.py
tests/: __init__.py  conftest.py  test_browser_automation.py
tests/behavioral/: __init__.py  test_crews.py
tests/contract/: test_api_contracts.py
tests/edge_cases/: test_input_validation_edge_cases.py
tests/integration/: test_api.py  test_api_behavioral_endpoints.py  test_behavioral_validation_pipeline.py  test_data_management.py  test_database_integration.py  test_enhanced_e2e_pipeline.py  test_hybrid_validation_pipeline.py  test_migration_validator.py
tests/performance/: locustfile.py  test_api_performance.py  test_performance_benchmarks.py
tests/property_based/: test_code_analyzer_properties.py
tests/security/: __init__.py  test_api_integration.py  test_authentication.py  test_password_policy.py  test_session_manager.py
tests/strategies/: test_strategy.md
tests/system/: test_end_to_end_pipeline.py  test_pipeline_health_check.py
tests/unit/: test_browser_automation_engine.py  test_code_analyzer.py  test_config.py  test_input_processor.py  test_llm_service.py  test_models.py  test_semantic_comparator.py  test_validation_reporter.py
tests/utils/: __init__.py  data_cleanup.py
