[project]
name = "ai-powered-migration-validation-system"
version = "0.1.0"
description = "AI-Powered Migration Validation System"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pydantic-settings",
    "structlog",
    "fastapi",
    "uvicorn[standard]",
    "SQLAlchemy",
    "alembic",
    "python-dotenv",
    "Pillow", # For image processing in visual_analyzer
    "openai", # For OpenAI LLM provider
    "anthropic", # For Anthropic LLM provider
    "google-generativeai", # For Google LLM provider
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "isort",
    "flake8",
    "mypy",
    "bandit",
    "safety",
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "D", "I"] # Extend as needed
ignore = ["D100", "D104", "D105", "D107"] # Ignore missing docstrings for modules, functions, classes, methods

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py
